6772683: Thread.isInterrupted() fails to return true on multiprocessor PC

Set the control edge for the field _interrupted load in inline_native_isInterrupted().

Reviewed-by: never